bug 49482, 51304 - replace if(AjxEnv.hasFirebug) with if(console && console.log) - change the way we display error message for DYNSELECT items to get rid of annoying jumping - do not force a value onto the text field in DYNSELECT when the value came from an event chain, this fixes the annoying disapearance of symbols when you type fast
http://bugzilla.zimbra.com/show_bug.cgi?id=49482
http://bugzilla.zimbra.com/show_bug.cgi?id=51304

Copied from Perforce
 Change: 252098

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -1459,6 +1459,18 @@ input.xform_field {
 	border-bottom-width:1px;
 	border-right-width:1px;
 }
+.dynselect_error_note,
+.oselect_error_note {
+    @MenuContainer@
+    @Text-error@
+    @NoticeContainer-warning@  
+    position:absolute;
+    z-index:10000000000;
+    border-bottom-width:1px;
+    border-right-width:1px;
+    white-space:nowrap;
+}
+
 .dynselect_menu,
 .oselect_menu {
 	@MenuContainer@
